# C-Programming

./: 7-principles-of-structural-programming.md  README.md  README_CAT_GREP_RUS.md
BashUtils/: Task.md
BashUtils/cat/: Makefile  cat-b.c  cat-e.c  cat-egnu.c  cat-n.c  cat-s.c  cat-tgnu.c  cat-tt.c  cat-v.c  cat.c  s21_cat.c  s21_cat.h
BashUtils/grep/: Makefile  grep-c.c  grep-e.c  grep-h.c  grep-i.c  grep-l.c  grep-n.c  grep-o.c  grep-s.c  grep-v.c  grep.c  s21_grep.c  s21_grep.h
SmartCalc_v1/: README.md
SmartCalc_v1/application/: Smartcalc
SmartCalc_v1/application/Smartcalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d  moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
SmartCalc_v1/run/application/: CMakeCache.txt  Makefile  cmake_install.cmake
SmartCalc_v1/run/application/Smartcalc_autogen/EWIEGA46WW/: moc_mainwindow.cpp
SmartCalc_v1/run/application/Smartcalc_autogen/include/: ui_mainwindow.h
SmartCalc_v1/src/: Makefile
SmartCalc_v1/src/exe/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  s21_basic_errors.c  s21_calculator.c  s21_converter.c  s21_graph_main_c.c  s21_helpers.c  s21_main_c.c  s21_rounding.c  s21_simplifier.c  s21_smartcalc.h
cat/: cat-e.c  cat-n.c  cat-s.c  cat-tgnu.c  cat-v.c  test_cat.sh
grep/: grep-c.c  grep-h.c  grep-o.c  grep-s.c  grep.c  s21_grep.c
linters/: instruction.txt
others/: bubble_sort.c  camel_to_snake.c  find_next-chr.c  my_memset.c  my_reverse.c  my_strchr.c  my_strcompare.c  my_strcpy.c  my_strcpyhard.c  my_strtok.c  my_trim.c  trimchareasy.c  two-dimens_sort.c
style_test/: instruction.txt
